# gen_gcode

./: .gitignore  Cargo.toml  README.md  foo.gcode
.github/workflows/: codecov.yml  rust.yml
examples/: 2wallbox.rs
src/: consts.rs  lib.rs  machine.rs
tests/: test.rs
