[package]
name = "gen_gcode"
version = "0.1.0"
authors = ["Cody Belcher <cody.t.belcher@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/codytrey/gen_gcode"
readme = "README.md"
keywords = ["gcode", "g-code", "3d", "printer", "printing"]
description = "A functional G-Code generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
